Editando con Angular

--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,2 +1,22 @@
-<h1>Edit</h1>
-<a routerLink="/">List</a>
+<div style="text-align: center">
+  <h1>Update Note</h1>
+  <a routerLink="/">List</a>
+  <br /> <br />
+  
+  <div>
+    <form (submit)="onSubmit()">
+      <label>Note</label> &nbsp;
+      <input type="text" [(ngModel)]="note.text" autofocus name="note"/>
+      <br />
+      <br />
+  
+      <label>Date</label> &nbsp;
+      <input type="date" [(ngModel)]="note.date" (ngModelChange)="note.date = $event" name="date" />
+      <br />
+      <br />
+  
+      <button type="submit">Save</button>
+  
+    </form>
+  </div>
+</div>
